Only include compression handler if compression is enabled
As enabling of compression is controlled by a build time property,
we can leverage this to only add the handler if necessary.
Furthermore, we can use the build time information to
remove the need for volatile fields