@@ -1,7 +1,9 @@
 package io.quarkus.resteasy.reactive.server.deployment;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 
 import org.jboss.jandex.ClassInfo;
 import org.jboss.jandex.DotName;
@@ -15,6 +17,7 @@ import org.jboss.resteasy.reactive.server.processor.scanning.MethodScanner;
 import io.quarkus.resteasy.reactive.server.runtime.ResteasyReactiveCompressionHandler;
 import io.quarkus.vertx.http.Compressed;
 import io.quarkus.vertx.http.Uncompressed;
+import io.quarkus.vertx.http.runtime.HttpBuildTimeConfig;
 import io.quarkus.vertx.http.runtime.HttpCompression;
 
 public class CompressionScanner implements MethodScanner {
@@ -22,9 +25,19 @@ public class CompressionScanner implements MethodScanner {
     static final DotName COMPRESSED = DotName.createSimple(Compressed.class.getName());
     static final DotName UNCOMPRESSED = DotName.createSimple(Uncompressed.class.getName());
 
+    private final HttpBuildTimeConfig httpBuildTimeConfig;
+
+    public CompressionScanner(HttpBuildTimeConfig httpBuildTimeConfig) {
+        this.httpBuildTimeConfig = httpBuildTimeConfig;
+    }
+
     @Override
     public List<HandlerChainCustomizer> scan(MethodInfo method, ClassInfo actualEndpointClass,
             Map<String, Object> methodContext) {
+        if (!httpBuildTimeConfig.enableCompression) {
+            return Collections.emptyList();
+        }
+
         AnnotationStore annotationStore = (AnnotationStore) methodContext.get(EndpointIndexer.METHOD_CONTEXT_ANNOTATION_STORE);
         HttpCompression compression = HttpCompression.UNDEFINED;
         if (annotationStore.hasAnnotation(method, COMPRESSED)) {
@@ -42,9 +55,10 @@ public class CompressionScanner implements MethodScanner {
         }
         if (compression == HttpCompression.OFF) {
             // No action is needed because the "Content-Encoding: identity" header is set for every request if compression is enabled
-            return List.of();
+            return Collections.emptyList();
         }
-        ResteasyReactiveCompressionHandler handler = new ResteasyReactiveCompressionHandler();
+        ResteasyReactiveCompressionHandler handler = new ResteasyReactiveCompressionHandler(
+                Set.copyOf(httpBuildTimeConfig.compressMediaTypes.orElse(Collections.emptyList())));
         handler.setCompression(compression);
         return List.of(new FixedHandlerChainCustomizer(handler, HandlerChainCustomizer.Phase.AFTER_RESPONSE_CREATED));
     }
